# docs/swagger.json
@@ -35,9 +35,9 @@
                 }
             }
         },
-        "/shops/create": {
+        "/stores/create": {
             "post": {
-                "description": "New shop using json request body",
+                "description": "New store using json request body",
                 "consumes": [
                     "application/json"
                 ],
@@ -45,13 +45,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "shops"
+                    "Stores"
                 ],
-                "summary": "Create a new shop using",
+                "summary": "Create a new store using",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Shops Name",
+                        "description": "Stores Name",
                         "name": "name",
                         "in": "path",
                         "required": true
@@ -61,31 +61,60 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/shops.ShopsSerializer"
+                            "$ref": "#/definitions/stores.StoresSerializer"
                         }
                     }
                 }
             }
         },
-        "/shops/get-all": {
+        "/stores/get-all": {
             "get": {
-                "description": "Retrieve a list of all shops",
+                "description": "Retrieve a list of all Stores",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "shops"
+                    "Stores"
                 ],
-                "summary": "Get all shops",
+                "summary": "Get all Stores",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/shops.ShopsSerializer"
+                                "$ref": "#/definitions/stores.StoresSerializer"
                             }
                         }
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
+            }
+        },
+        "/stores/get-user-store": {
+            "get": {
+                "description": "Retrieve a the store belonging to a logged in user",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Stores"
+                ],
+                "summary": "Get a user store",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/stores.StoresSerializer"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
                     },
                     "404": {
                         "description": "Not Found"
@@ -95,6 +124,23 @@
         }
     },
     "definitions": {
+        "accounts.UserSerializer": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "last_name": {
+                    "type": "string"
+                },
+                "phone": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Categories": {
             "type": "object",
             "properties": {
@@ -106,7 +152,7 @@
                 }
             }
         },
-        "models.Shops": {
+        "models.Stores": {
             "type": "object",
             "properties": {
                 "id": {
@@ -118,7 +164,7 @@
                 "owner": {
                     "$ref": "#/definitions/models.User"
                 },
-                "shop_name": {
+                "store_name": {
                     "type": "string"
                 },
                 "user_id": {
@@ -190,8 +236,8 @@
                         "$ref": "#/definitions/models.Categories"
                     }
                 },
-                "shop": {
-                    "$ref": "#/definitions/models.Shops"
+                "store": {
+                    "$ref": "#/definitions/models.Stores"
                 },
                 "sub_images": {
                     "type": "array",
@@ -204,7 +250,7 @@
                 }
             }
         },
-        "shops.ShopsSerializer": {
+        "stores.StoresSerializer": {
             "type": "object",
             "properties": {
                 "id": {
@@ -213,7 +259,10 @@
                 "image": {
                     "type": "string"
                 },
-                "shop_name": {
+                "owner": {
+                    "$ref": "#/definitions/accounts.UserSerializer"
+                },
+                "store_name": {
                     "type": "string"
                 }
             }
