# package/shops/serializers.go
@@ -1,7 +1,0 @@
-package shops
-
-type ShopsSerializer struct {
-	ID    uint   `json:"id"`
-	Name  string `json:"shop_name"`
-	Image string `json:"image"`
-}
